src/main/java/org/example/pruebatecnicaecommerce/shared/error/ErrorResponse.java
package org.example.pruebatecnicaecommerce.shared.error;

import com.fasterxml.jackson.annotation.JsonFormat;
import lombok.Value;

import java.time.LocalDateTime;

/**
 * Standard error response DTO
 */
@Value
public class ErrorResponse {
    String code;
    String message;

    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
    LocalDateTime timestamp;

    public ErrorResponse(String code, String message) {
        this.code = code;
        this.message = message;
        this.timestamp = LocalDateTime.now();
    }
}